--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BURGER PALACE</title>
+    <title>Burger Palace</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-      <div class="menu-bar">
 
+  <body>
+    <div class="wrapper">
+      <div class="top-nav">
+        <div class="logo">
+          <img src="/WhatsApp Image 2022-01-22 at 1.02.40 PM.jpeg" alt="" />
+          <h2 class="logo-text">
+            <span class="black">Bur</span><span class="yellow">ger</span>
+          </h2>
+        </div>
+        <div class="main-nav">
+          <ul>
+            <li class="active">Home</li>
+            <li>Offers</li>
+            <li>Contacts</li>
+            <li>About</li>
+            <li class="icon">Account <span class="icon-inner">9</span></li>
+          </ul>
+        </div>
       </div>
+      <div class="container"></div>
+    </div>
   </body>
 </html>
