--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Burger Palace</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="/font-awesome-4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
   <body>
@@ -28,6 +32,42 @@
         </div>
       </div>
       <div class="container"></div>
+    </div>
+    <div class="advert">
+      <div class="col1">
+        <span><i class="fa fa-phone">phone</i></span>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe beatae
+          earum laudantium odio ipsam enim, eveniet at autem, voluptas,
+          perspiciatis placeat nesciunt nisi aspernatur molestias expedita fugit
+          nulla minima! Nihil?
+        </p>
+      </div>
+      <div class="col2">
+        <span><i class="fa fa-phone">phone</i></span>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe beatae
+          earum laudantium odio ipsam enim, eveniet at autem, voluptas,
+          perspiciatis placeat nesciunt nisi aspernatur molestias expedita fugit
+          nulla minima! Nihil?
+        </p>
+      </div>
+      <div class="col1">
+        <span><i class="fa fa-phone">phone</i></span>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe beatae
+          earum laudantium odio ipsam enim, eveniet at autem, voluptas,
+          perspiciatis placeat nesciunt nisi aspernatur molestias expedita fugit
+          nulla minima! Nihil?
+        </p>
+      </div>
+    </div>
+    <div class="menu">
+      <div class="card1">
+        <img src="" alt="" />
+      </div>
+      <div class="card1"></div>
+      <div class="card1"></div>
     </div>
   </body>
 </html>
