--- a/index.html
+++ b/index.html
@@ -63,11 +63,30 @@
       </div>
     </div>
     <div class="menu">
-      <div class="card1">
-        <img src="" alt="" />
+        <p>OUR  <span>MENU</span> </p>
+      <div class="row">
+        <div class="card1">
+          <!-- <img src="/images/SeekPng 2.png" alt="" /> -->
+          <p>jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis. Laudantium et possimus, voluptatibus beatae dolorum deserunt at nobis impedit, iure eveniet blanditiis.</p>
+
+        </div>
+        <div class="card1">
+          <!-- <img src="/images/SeekPng 1.png" alt="" /> -->
+        </div>
+        <div class="card1">
+          <!-- <img src="/images/SeekPng 3.png" alt="" /> -->
+        </div>
       </div>
-      <div class="card1"></div>
-      <div class="card1"></div>
+      <div class="row">
+        <div class="card1">
+          <!-- <img src="/images/SeekPng 2.png" alt="" /> -->
+        </div>
+        <div class="card1">
+          <!-- <img src="/images/SeekPng 1.png" alt="" /> -->
+        </div>
+        <div class="card1">
+          <!-- <img src="/images/SeekPng 3.png" alt="" /> -->
+        </div>
     </div>
   </body>
 </html>
