--- a/index.html
+++ b/index.html
@@ -63,30 +63,88 @@
       </div>
     </div>
     <div class="menu">
-        <p>OUR  <span>MENU</span> </p>
+      <p>OUR <span>MENU</span></p>
       <div class="row">
-        <div class="card1">
-          <!-- <img src="/images/SeekPng 2.png" alt="" /> -->
-          <p>jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis. Laudantium et possimus, voluptatibus beatae dolorum deserunt at nobis impedit, iure eveniet blanditiis.</p>
-
+        <div class="card">
+          <div class="content">
+            <img src="/images/SeekPng 1.png" alt="" />
+            <p>DOUBLE BURGER</p>
+            <p>
+              jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing
+              elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis.
+              Laudantium et possimus, voluptatibus beatae dolorum deserunt at
+              nobis impedit, iure eveniet blanditiis.
+            </p>
+          </div>
         </div>
-        <div class="card1">
-          <!-- <img src="/images/SeekPng 1.png" alt="" /> -->
+        <div class="card">
+          <div class="content">
+            <img src="/images/SeekPng 1.png" alt="" />
+            <p>DOUBLE BURGER</p>
+            <p>
+              jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing
+              elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis.
+              Laudantium et possimus, voluptatibus beatae dolorum deserunt at
+              nobis impedit, iure eveniet blanditiis.
+            </p>
+          </div>
         </div>
-        <div class="card1">
-          <!-- <img src="/images/SeekPng 3.png" alt="" /> -->
+        <div class="card">
+          <div class="content">
+            <img src="/images/SeekPng 1.png" alt="" />
+            <p>DOUBLE BURGER</p>
+            <p>
+              jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing
+              elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis.
+              Laudantium et possimus, voluptatibus beatae dolorum deserunt at
+              nobis impedit, iure eveniet blanditiis.
+            </p>
+          </div>
         </div>
       </div>
       <div class="row">
-        <div class="card1">
-          <!-- <img src="/images/SeekPng 2.png" alt="" /> -->
+        <div class="card">
+          <div class="content">
+            <img src="/images/SeekPng 1.png" alt="" />
+            <p>DOUBLE BURGER</p>
+            <p>
+              jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing
+              elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis.
+              Laudantium et possimus, voluptatibus beatae dolorum deserunt at
+              nobis impedit, iure eveniet blanditiis.
+            </p>
+          </div>
         </div>
-        <div class="card1">
-          <!-- <img src="/images/SeekPng 1.png" alt="" /> -->
+        <div class="card">
+          <div class="content">
+            <img src="/images/SeekPng 1.png" alt="" />
+            <p>DOUBLE BURGER</p>
+            <p>
+              jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing
+              elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis.
+              Laudantium et possimus, voluptatibus beatae dolorum deserunt at
+              nobis impedit, iure eveniet blanditiis.
+            </p>
+          </div>
         </div>
-        <div class="card1">
-          <!-- <img src="/images/SeekPng 3.png" alt="" /> -->
+        <div class="card">
+          <div class="content">
+            <img src="/images/SeekPng 1.png" alt="" />
+            <p>DOUBLE BURGER</p>
+            <p>
+              jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing
+              elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis.
+              Laudantium et possimus, voluptatibus beatae dolorum deserunt at
+              nobis impedit, iure eveniet blanditiis.
+            </p>
+          </div>
         </div>
+      </div>
+    </div>
+    <div class="slider">
+      <p>The Double</p>
+      <p>Decker</p>
+      <p>Taste the explotion in your mouth</p>
     </div>
   </body>
 </html>
