--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
               Laudantium et possimus, voluptatibus beatae dolorum deserunt at
               nobis impedit, iure eveniet blanditiis.
             </p>
+            <div class="price">
+              <p>Ksh 200</p>
+              <p><i class="fa fa-shopping-cart"></i></p>
+            </div>
           </div>
         </div>
         <div class="card">
@@ -142,9 +146,15 @@
       </div>
     </div>
     <div class="slider">
-      <p>The Double</p>
-      <p>Decker</p>
-      <p>Taste the explotion in your mouth</p>
+      <div class="content">
+        <p>The Double</p>
+        <p>Decker</p>
+        <p>Taste the explotion in your mouth</p>
+      </div>
+      <div class="d-check">
+        <img class="d1" src="/images/double-check2.png" alt="" />
+        <img class="d2" src="/images/double-check1.png" alt="" />
+      </div>
     </div>
   </body>
 </html>
