discover more section

--- a/index.html
+++ b/index.html
@@ -152,8 +152,20 @@
         <p>Taste the explotion in your mouth</p>
       </div>
       <div class="d-check">
-        <img class="d1" src="/images/double-check2.png" alt="" />
-        <img class="d2" src="/images/double-check1.png" alt="" />
+        <img class="d1" src="/images/double-check1.png" alt="" />
+        <img class="d2" src="/images/double-check2.png" alt="" />
+      </div>
+    </div>
+    <div class="discover">
+      <div class="content">
+        <p>Discover even more</p>
+        <p>with our mobile</p>
+        <p>apps</p>
+      </div>
+
+      <div class="screen">
+        <img class="mob1" src="/images/mobile1.png" alt="" />
+        <img class="mob2" src="/images/mobile2.png" alt="" />
       </div>
     </div>
   </body>
