--- a/index.html
+++ b/index.html
@@ -168,5 +168,34 @@
         <img class="mob2" src="/images/mobile2.png" alt="" />
       </div>
     </div>
+    <div class="footer">
+      <div class="infor">
+        <div class="logo">
+          <img src="/images/logo.png" alt="" />
+          <h2 class="logo-text">
+            <span class="black">Bur</span><span class="yellow">ger</span>
+          </h2>
+        </div>
+        <div class="quick-links">
+          <p>Site Map</p>
+          <ul>
+            <li>Home</li>
+            <li>Services</li>
+            <li>About</li>
+            <li>Contacts</li>
+          </ul>
+        </div>
+        <div class="contact">
+          <p>Subscribe to our news letter</p>
+          <div class="send">
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <label for="subscribe">Subscribe</label>
+          </div>
+        </div>
+      </div>
+      <div class="copy-right"></div>
+    </div>
+
+    .
   </body>
 </html>
