copy-rights section

--- a/index.html
+++ b/index.html
@@ -193,7 +193,17 @@
           </div>
         </div>
       </div>
-      <div class="copy-right"></div>
+      <div class="copy-right">
+        <p>Copyright 2022. All rights reserved.</p>
+        <ul class="social-media">
+          <li><i class="fa fa-facebook"></i></li>
+          <li><i class="fa fa-youtube"></i></li>
+          <li><i class="fa fa-twitter"></i></li>
+          <li><i class="fa fa-instagram-square"></i></li>
+          <li><i class="fa fa-linkedin"></i></li>
+        </ul>
+        <p>Designed by Victoria Mwangi</p>
+      </div>
     </div>
 
     .
