--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <div class="top-nav">
         <div class="logo">
-          <img src="/WhatsApp Image 2022-01-22 at 1.02.40 PM.jpeg" alt="" />
+          <img src="/images/logo.png" alt="" />
           <h2 class="logo-text">
             <span class="black">Bur</span><span class="yellow">ger</span>
           </h2>
@@ -31,11 +31,13 @@
           </ul>
         </div>
       </div>
-      <div class="container"></div>
+      <div class="container">
+        <img src="/images/[CITYPNG 1.png" alt="" />
+      </div>
     </div>
     <div class="advert">
       <div class="col1">
-        <span><i class="fa fa-phone">phone</i></span>
+        <span><i class="fab fa-concierge-bell"></i></span>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe beatae
           earum laudantium odio ipsam enim, eveniet at autem, voluptas,
@@ -44,7 +46,7 @@
         </p>
       </div>
       <div class="col2">
-        <span><i class="fa fa-phone">phone</i></span>
+        <span><i class="fas fa-truck"></i></span>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe beatae
           earum laudantium odio ipsam enim, eveniet at autem, voluptas,
@@ -70,14 +72,13 @@
             <img src="/images/SeekPng 1.png" alt="" />
             <p>DOUBLE BURGER</p>
             <p>
-              jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis.
-              Laudantium et possimus, voluptatibus beatae dolorum deserunt at
-              nobis impedit, iure eveniet blanditiis.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              dicta iusto unde odio sed impedit incidunt quis. Laudantium et
+              possimus, voluptatibus beatae anditiis.
             </p>
             <div class="price">
               <p>Ksh 200</p>
-              <p><i class="fa fa-shopping-cart"></i></p>
+              <p class="cart"><i class="fa fa-shopping-cart"></i></p>
             </div>
           </div>
         </div>
@@ -86,23 +87,29 @@
             <img src="/images/SeekPng 1.png" alt="" />
             <p>DOUBLE BURGER</p>
             <p>
-              jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis.
-              Laudantium et possimus, voluptatibus beatae dolorum deserunt at
-              nobis impedit, iure eveniet blanditiis.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              dicta iusto unde odio sed impedit incidunt quis. Laudantium et
+              possimus, voluptatibus beatae anditiis.
             </p>
+            <div class="price">
+              <p>Ksh 200</p>
+              <p class="cart"><i class="fa fa-shopping-cart"></i></p>
+            </div>
           </div>
         </div>
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 1.png" alt="" />
+            <img src="/images/SeekPng 3.png" alt="" />
             <p>DOUBLE BURGER</p>
             <p>
-              jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis.
-              Laudantium et possimus, voluptatibus beatae dolorum deserunt at
-              nobis impedit, iure eveniet blanditiis.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              dicta iusto unde odio sed impedit incidunt quis. Laudantium et
+              possimus, voluptatibus beatae anditiis.
             </p>
+            <div class="price">
+              <p>Ksh 200</p>
+              <p class="cart"><i class="fa fa-shopping-cart"></i></p>
+            </div>
           </div>
         </div>
       </div>
@@ -112,11 +119,14 @@
             <img src="/images/SeekPng 1.png" alt="" />
             <p>DOUBLE BURGER</p>
             <p>
-              jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis.
-              Laudantium et possimus, voluptatibus beatae dolorum deserunt at
-              nobis impedit, iure eveniet blanditiis.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              dicta iusto unde odio sed impedit incidunt quis. Laudantium et
+              possimus, voluptatibus beatae anditiis.
             </p>
+            <div class="price">
+              <p>Ksh 200</p>
+              <p class="cart"><i class="fa fa-shopping-cart"></i></p>
+            </div>
           </div>
         </div>
         <div class="card">
@@ -124,11 +134,14 @@
             <img src="/images/SeekPng 1.png" alt="" />
             <p>DOUBLE BURGER</p>
             <p>
-              jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis.
-              Laudantium et possimus, voluptatibus beatae dolorum deserunt at
-              nobis impedit, iure eveniet blanditiis.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              dicta iusto unde odio sed impedit incidunt quis. Laudantium et
+              possimus, voluptatibus beatae anditiis.
             </p>
+            <div class="price">
+              <p>Ksh 200</p>
+              <p class="cart"><i class="fa fa-shopping-cart"></i></p>
+            </div>
           </div>
         </div>
         <div class="card">
@@ -136,11 +149,14 @@
             <img src="/images/SeekPng 1.png" alt="" />
             <p>DOUBLE BURGER</p>
             <p>
-              jashasfdhjczb Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Aperiam, dicta iusto unde odio sed impedit incidunt quis.
-              Laudantium et possimus, voluptatibus beatae dolorum deserunt at
-              nobis impedit, iure eveniet blanditiis.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              dicta iusto unde odio sed impedit incidunt quis. Laudantium et
+              possimus, voluptatibus beatae anditiis.
             </p>
+            <div class="price">
+              <p>Ksh 200</p>
+              <p class="cart"><i class="fa fa-shopping-cart"></i></p>
+            </div>
           </div>
         </div>
       </div>
