--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
         </div>
       </div>
       <div class="container">
-        <img src="/images/[CITYPNG 1.png" alt="" />
+        <div class="welcome">
+          <p class="bold">
+            <strong>Rain or shine, <br />its time to dine.</strong>
+          </p>
+          <p class="about-text">
+            We cook & deliver the tastiest burgers <br />right away to your
+            destignated location
+          </p>
+        </div>
+        <div class="wel-image"><img src="/images/[CITYPNG 1.png" alt="" /></div>
       </div>
     </div>
     <div class="advert">
