--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   </head>
 
   <body>
-    <div class="wrapper">
+    <div class="showcase">
       <div class="top-nav">
         <div class="logo">
           <img src="/images/logo.png" alt="" />
           <h2 class="logo-text">
-            <span class="black">Bur</span><span class="yellow">ger</span>
+            <span class="black"><em></em> Bur</span
+            ><span class="yellow"><em>ger</em> </span>
           </h2>
         </div>
         <div class="main-nav">
@@ -40,6 +41,7 @@
             We cook & deliver the tastiest burgers <br />right away to your
             destignated location
           </p>
+          <button>Order now</button>
         </div>
         <div class="wel-image"><img src="/images/[CITYPNG 1.png" alt="" /></div>
       </div>
@@ -74,12 +76,14 @@
       </div>
     </div>
     <div class="menu">
-      <p>OUR <span>MENU</span></p>
+      <p class="p-menu">
+        <strong> Our <span>MENU</span></strong>
+      </p>
       <div class="row">
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 1.png" alt="" />
-            <p>DOUBLE BURGER</p>
+            <img src="/images/SeekPng 2.png" alt="" />
+            <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
               dicta iusto unde odio sed impedit incidunt quis. Laudantium et
@@ -94,7 +98,7 @@
         <div class="card">
           <div class="content">
             <img src="/images/SeekPng 1.png" alt="" />
-            <p>DOUBLE BURGER</p>
+            <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
               dicta iusto unde odio sed impedit incidunt quis. Laudantium et
@@ -109,7 +113,7 @@
         <div class="card">
           <div class="content">
             <img src="/images/SeekPng 3.png" alt="" />
-            <p>DOUBLE BURGER</p>
+            <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
               dicta iusto unde odio sed impedit incidunt quis. Laudantium et
@@ -126,7 +130,7 @@
         <div class="card">
           <div class="content">
             <img src="/images/SeekPng 1.png" alt="" />
-            <p>DOUBLE BURGER</p>
+            <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
               dicta iusto unde odio sed impedit incidunt quis. Laudantium et
@@ -141,7 +145,7 @@
         <div class="card">
           <div class="content">
             <img src="/images/SeekPng 1.png" alt="" />
-            <p>DOUBLE BURGER</p>
+            <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
               dicta iusto unde odio sed impedit incidunt quis. Laudantium et
@@ -156,7 +160,7 @@
         <div class="card">
           <div class="content">
             <img src="/images/SeekPng 1.png" alt="" />
-            <p>DOUBLE BURGER</p>
+            <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
               dicta iusto unde odio sed impedit incidunt quis. Laudantium et
@@ -172,9 +176,8 @@
     </div>
     <div class="slider">
       <div class="content">
-        <p>The Double</p>
-        <p>Decker</p>
-        <p>Taste the explotion in your mouth</p>
+        <p class="slider-text">The Double<br /><span> Decker</span></p>
+        <p class="slider-text1">Taste the explotion in your mouth</p>
       </div>
       <div class="d-check">
         <img class="d1" src="/images/double-check1.png" alt="" />
