--- a/index.html
+++ b/index.html
@@ -186,9 +186,7 @@
     </div>
     <div class="discover">
       <div class="content">
-        <p>Discover even more</p>
-        <p>with our mobile</p>
-        <p>apps</p>
+        <p>Discover even more <br />with our mobile <br />apps</p>
       </div>
 
       <div class="screen">
