--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
     <div class="menu">
       <p class="p-menu">
-        <strong> Our <span>MENU</span></strong>
+        <strong> Our <span class="mark">MENU</span></strong>
       </p>
       <div class="row">
         <div class="card">
@@ -214,8 +214,10 @@
         <div class="contact">
           <p>Subscribe to our news letter</p>
           <div class="send">
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            <label for="subscribe">Subscribe</label>
+            <textarea name="" id="" cols="30" rows="10">
+Enter your email"</textarea
+            >
+            <button>Subscribe</button>
           </div>
         </div>
       </div>
