--- a/index.html
+++ b/index.html
@@ -178,7 +178,14 @@
       <div class="content">
         <p class="slider-text">The Double<br /><span> Decker</span></p>
         <p class="slider-text1">Taste the explotion in your mouth</p>
+        <div class="indicators">
+          <i class="fa fa-circle active"></i>
+          <i class="fa fa-circle"></i>
+          <i class="fa fa-circle"></i>
+          <i class="fa fa-arrow-right active"></i>
+        </div>
       </div>
+
       <div class="d-check">
         <img class="d1" src="/images/double-check1.png" alt="" />
         <img class="d2" src="/images/double-check2.png" alt="" />
