--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             <li>Offers</li>
             <li>Contacts</li>
             <li>About</li>
-            <li class="icon">Account <span class="icon-inner">9</span></li>
+            <li class="icon">
+              <i class="fa fa-user-circle"></i>
+              <span class="icon-inner">9</span>
+            </li>
           </ul>
         </div>
       </div>
@@ -48,7 +51,7 @@
     </div>
     <div class="advert">
       <div class="col1">
-        <span><i class="fab fa-concierge-bell"></i></span>
+        <span><i class="fa fa-concierge-bell"></i></span>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe beatae
           earum laudantium odio ipsam enim, eveniet at autem, voluptas,
@@ -66,7 +69,7 @@
         </p>
       </div>
       <div class="col1">
-        <span><i class="fa fa-phone">phone</i></span>
+        <span><i class="fa fa-hamburger"></i></span>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe beatae
           earum laudantium odio ipsam enim, eveniet at autem, voluptas,
