--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <div class="advert">
       <div class="col1">
-        <span><i class="fab fa-concierge-bell"></i></span>
+        <span><i class="fa fa-concierge-bell"></i></span>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe beatae
           earum laudantium odio ipsam enim, eveniet at autem, voluptas,
@@ -57,7 +57,7 @@
         </p>
       </div>
       <div class="col2">
-        <span><i class="fas fa-truck"></i></span>
+        <span><i class="fa fa-truck"></i></span>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe beatae
           earum laudantium odio ipsam enim, eveniet at autem, voluptas,
