--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="showcase">
       <div class="top-nav">
         <div class="logo">
-          <img src="/images/logo.png" alt="" />
+          <img src="./images/logo.png" alt="" />
           <h2 class="logo-text">
             <span class="black"><em></em> Bur</span
             ><span class="yellow"><em>ger</em> </span>
