--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             <li>Offers</li>
             <li>Contacts</li>
             <li>About</li>
-            <li class="icon">Account <span class="icon-inner">9</span></li>
+            <li class="icon">
+              <i class="fa fa-user-circle"></i>
+              <span class="icon-inner">9</span>
+            </li>
           </ul>
         </div>
       </div>
@@ -43,7 +46,9 @@
           </p>
           <button>Order now</button>
         </div>
-        <div class="wel-image"><img src="/images/[CITYPNG 1.png" alt="" /></div>
+        <div class="wel-image">
+          <img src="./images/[CITYPNG 1.png" alt="" />
+        </div>
       </div>
     </div>
     <div class="advert">
@@ -66,7 +71,7 @@
         </p>
       </div>
       <div class="col1">
-        <span><i class="fa fa-phone">phone</i></span>
+        <span><i class="fas fa-hamburger"></i></span>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe beatae
           earum laudantium odio ipsam enim, eveniet at autem, voluptas,
@@ -82,7 +87,7 @@
       <div class="row">
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 2.png" alt="" />
+            <img src="./images/SeekPng 2.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -97,7 +102,7 @@
         </div>
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 1.png" alt="" />
+            <img src="./images/SeekPng 1.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -112,7 +117,7 @@
         </div>
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 3.png" alt="" />
+            <img src="./images/SeekPng 3.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -129,7 +134,7 @@
       <div class="row">
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 1.png" alt="" />
+            <img src="./images/SeekPng 1.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -144,7 +149,7 @@
         </div>
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 1.png" alt="" />
+            <img src="./images/SeekPng 1.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -159,7 +164,7 @@
         </div>
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 1.png" alt="" />
+            <img src="./images/SeekPng 1.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -178,10 +183,17 @@
       <div class="content">
         <p class="slider-text">The Double<br /><span> Decker</span></p>
         <p class="slider-text1">Taste the explotion in your mouth</p>
+        <div class="indicators">
+          <i class="fa fa-circle active"></i>
+          <i class="fa fa-circle"></i>
+          <i class="fa fa-circle"></i>
+          <i class="fa fa-arrow-right active"></i>
+        </div>
       </div>
+
       <div class="d-check">
-        <img class="d1" src="/images/double-check1.png" alt="" />
-        <img class="d2" src="/images/double-check2.png" alt="" />
+        <img class="d1" src="./images/double-check1.png" alt="" />
+        <img class="d2" src="./images/double-check2.png" alt="" />
       </div>
     </div>
     <div class="discover">
@@ -190,14 +202,14 @@
       </div>
 
       <div class="screen">
-        <img class="mob1" src="/images/mobile1.png" alt="" />
-        <img class="mob2" src="/images/mobile2.png" alt="" />
+        <img class="mob1" src="./images/mobile1.png" alt="" />
+        <img class="mob2" src="./images/mobile2.png" alt="" />
       </div>
     </div>
     <div class="footer">
       <div class="infor">
         <div class="logo">
-          <img src="/images/logo.png" alt="" />
+          <img src="./images/logo.png" alt="" />
           <h2 class="logo-text">
             <span class="black">Bur</span><span class="yellow">ger</span>
           </h2>
@@ -215,7 +227,7 @@
           <p>Subscribe to our news letter</p>
           <div class="send">
             <textarea name="" id="" cols="30" rows="10"></textarea>
-            <label for="subscribe">Subscribe</label>
+            <button>Subscribe</button>
           </div>
         </div>
       </div>
