--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <p>Subscribe to our news letter</p>
           <div class="send">
             <textarea name="" id="" cols="30" rows="10">
-Enter your email"</textarea
+Enter your email</textarea
             >
             <button>Subscribe</button>
           </div>
