--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
-      href="/font-awesome-4.7.0/css/font-awesome.min.css"
+      href="./font-awesome-4.7.0/css/font-awesome.min.css"
     />
   </head>
 
