--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Burger Palace</title>
-    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
-      href="./font-awesome-4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
     <div class="showcase">
       <div class="top-nav">
         <div class="logo">
-          <img src="./images/logo.png" alt="" />
+          <img src="/images/logo.png" alt="" />
           <h2 class="logo-text">
             <span class="black"><em></em> Bur</span
             ><span class="yellow"><em>ger</em> </span>
@@ -46,9 +49,7 @@
           </p>
           <button>Order now</button>
         </div>
-        <div class="wel-image">
-          <img src="./images/[CITYPNG 1.png" alt="" />
-        </div>
+        <div class="wel-image"><img src="/images/[CITYPNG 1.png" alt="" /></div>
       </div>
     </div>
     <div class="advert">
@@ -62,7 +63,7 @@
         </p>
       </div>
       <div class="col2">
-        <span><i class="fa fa-truck"></i></span>
+        <span><i class="fas fa-truck"></i></span>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe beatae
           earum laudantium odio ipsam enim, eveniet at autem, voluptas,
@@ -71,7 +72,7 @@
         </p>
       </div>
       <div class="col1">
-        <span><i class="fas fa-hamburger"></i></span>
+        <span><i class="fa fa-hamburger"></i></span>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe beatae
           earum laudantium odio ipsam enim, eveniet at autem, voluptas,
@@ -82,12 +83,12 @@
     </div>
     <div class="menu">
       <p class="p-menu">
-        <strong> Our <span>MENU</span></strong>
+        <strong> Our <span class="mark">MENU</span></strong>
       </p>
       <div class="row">
         <div class="card">
           <div class="content">
-            <img src="./images/SeekPng 2.png" alt="" />
+            <img src="/images/SeekPng 2.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -102,7 +103,7 @@
         </div>
         <div class="card">
           <div class="content">
-            <img src="./images/SeekPng 1.png" alt="" />
+            <img src="/images/SeekPng 1.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -117,7 +118,7 @@
         </div>
         <div class="card">
           <div class="content">
-            <img src="./images/SeekPng 3.png" alt="" />
+            <img src="/images/SeekPng 3.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -134,7 +135,7 @@
       <div class="row">
         <div class="card">
           <div class="content">
-            <img src="./images/SeekPng 1.png" alt="" />
+            <img src="/images/SeekPng 1.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -149,7 +150,7 @@
         </div>
         <div class="card">
           <div class="content">
-            <img src="./images/SeekPng 1.png" alt="" />
+            <img src="/images/SeekPng 1.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -164,7 +165,7 @@
         </div>
         <div class="card">
           <div class="content">
-            <img src="./images/SeekPng 1.png" alt="" />
+            <img src="/images/SeekPng 1.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -192,8 +193,8 @@
       </div>
 
       <div class="d-check">
-        <img class="d1" src="./images/double-check1.png" alt="" />
-        <img class="d2" src="./images/double-check2.png" alt="" />
+        <img class="d1" src="/images/double-check1.png" alt="" />
+        <img class="d2" src="/images/double-check2.png" alt="" />
       </div>
     </div>
     <div class="discover">
@@ -202,14 +203,14 @@
       </div>
 
       <div class="screen">
-        <img class="mob1" src="./images/mobile1.png" alt="" />
-        <img class="mob2" src="./images/mobile2.png" alt="" />
+        <img class="mob1" src="/images/mobile1.png" alt="" />
+        <img class="mob2" src="/images/mobile2.png" alt="" />
       </div>
     </div>
     <div class="footer">
       <div class="infor">
         <div class="logo">
-          <img src="./images/logo.png" alt="" />
+          <img src="/images/logo.png" alt="" />
           <h2 class="logo-text">
             <span class="black">Bur</span><span class="yellow">ger</span>
           </h2>
@@ -226,7 +227,9 @@
         <div class="contact">
           <p>Subscribe to our news letter</p>
           <div class="send">
-            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <textarea name="" id="" cols="30" rows="10">
+Enter your email</textarea
+            >
             <button>Subscribe</button>
           </div>
         </div>
@@ -234,16 +237,14 @@
       <div class="copy-right">
         <p>Copyright 2022. All rights reserved.</p>
         <ul class="social-media">
-          <li><i class="fa fa-facebook"></i></li>
-          <li><i class="fa fa-youtube"></i></li>
-          <li><i class="fa fa-twitter"></i></li>
-          <li><i class="fa fa-instagram-square"></i></li>
-          <li><i class="fa fa-linkedin"></i></li>
+          <li><i class="fab fa-facebook"></i></li>
+          <li><i class="fab fa-youtube"></i></li>
+          <li><i class="fab fa-twitter"></i></li>
+          <li><i class="fab fa-instagram-square"></i></li>
+          <li><i class="fab fa-linkedin"></i></li>
         </ul>
         <p>Designed by Victoria Mwangi</p>
       </div>
     </div>
-
-    .
   </body>
 </html>
