st:change image path

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <div class="showcase">
       <div class="top-nav">
         <div class="logo">
-          <img src="/images/logo.png" alt="" />
+          <img src="./images/logo.png" alt="" />
           <h2 class="logo-text">
             <span class="black"><em></em> Bur</span
             ><span class="yellow"><em>ger</em> </span>
@@ -49,7 +49,13 @@
           </p>
           <button>Order now</button>
         </div>
-        <div class="wel-image"><img src="/images/[CITYPNG 1.png" alt="" /></div>
+        <div class="wel-image">
+          <img
+            src="
+          ./images/[CITYPNG 1.png"
+            alt=""
+          />
+        </div>
       </div>
     </div>
     <div class="advert">
@@ -88,7 +94,7 @@
       <div class="row">
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 2.png" alt="" />
+            <img src="./images/SeekPng 2.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -103,7 +109,7 @@
         </div>
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 1.png" alt="" />
+            <img src="./images/SeekPng 1.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -118,7 +124,7 @@
         </div>
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 3.png" alt="" />
+            <img src="./images/SeekPng 3.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -135,7 +141,7 @@
       <div class="row">
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 1.png" alt="" />
+            <img src="./images/SeekPng 1.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -150,7 +156,7 @@
         </div>
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 1.png" alt="" />
+            <img src="./images/SeekPng 1.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -165,7 +171,7 @@
         </div>
         <div class="card">
           <div class="content">
-            <img src="/images/SeekPng 1.png" alt="" />
+            <img src="./images/SeekPng 1.png" alt="" />
             <p class="burger-name">DOUBLE BURGER</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -193,8 +199,8 @@
       </div>
 
       <div class="d-check">
-        <img class="d1" src="/images/double-check1.png" alt="" />
-        <img class="d2" src="/images/double-check2.png" alt="" />
+        <img class="d1" src="./images/double-check1.png" alt="" />
+        <img class="d2" src="./images/double-check2.png" alt="" />
       </div>
     </div>
     <div class="discover">
@@ -203,14 +209,14 @@
       </div>
 
       <div class="screen">
-        <img class="mob1" src="/images/mobile1.png" alt="" />
-        <img class="mob2" src="/images/mobile2.png" alt="" />
+        <img class="mob1" src="./images/mobile1.png" alt="" />
+        <img class="mob2" src="./images/mobile2.png" alt="" />
       </div>
     </div>
     <div class="footer">
       <div class="infor">
         <div class="logo">
-          <img src="/images/logo.png" alt="" />
+          <img src="./images/logo.png" alt="" />
           <h2 class="logo-text">
             <span class="black">Bur</span><span class="yellow">ger</span>
           </h2>
